embed sticker tweet

--- a/kat/challenge.html
+++ b/kat/challenge.html
@@ -6,7 +6,10 @@
 </head>
 <body>
 <h1>More stickers?</h1>
-<p>I want a sticker!</p>
+<p>I want a sticker please!</p>
+<blockquote class="twitter-tweet" data-lang="en"><p lang="en" dir="ltr">Getting my <a href="https://twitter.com/hashtag/sticker?src=hash&amp;ref_src=twsrc%5Etfw">#sticker</a> game on! <a href="https://twitter.com/hashtag/GirlPower?src=hash&amp;ref_src=twsrc%5Etfw">#GirlPower</a> <a href="https://twitter.com/hashtag/yeswecode?src=hash&amp;ref_src=twsrc%5Etfw">#yeswecode</a> 👩🏼‍💻💃 <a href="https://t.co/ap7rKIYuU4">pic.twitter.com/ap7rKIYuU4</a></p>&mdash; Katjuša Koler (@katkoler) <a href="https://twitter.com/katkoler/status/925757536652980226?ref_src=twsrc%5Etfw">November 1, 2017</a></blockquote>
+<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+
 <br>
 <img src="https://m.popkey.co/8066dd/AoL4g.gif" />
 
